  `mirt()` and `multipleGroup()` for estimating higher dimensional models
  with greater accuracy (suggested by Alexander Robitzsch). Several auxillary
  function such as `fscores()`, `itemfit()`, and `M2()` also now contain an
  `QMC` argument (or will accept one through the ...  argument) to use the
  same integration scheme for better accuracy in higher dimensional models

BUG FIXES

  - fixed bug in `bfactor()` starting values when NAs were specified in the
  `model` argument

Changes in mirt 1.5

MAJOR CHANGES

  - for efficiency, the Hessian is no longer computed in `fscores()` unless
  it is required in the returned object

  - estimation with `method = 'MHRM'` now requires and explicitly `SE=TRUE`
  call to compute the information matrix. The matrix is now computed using
  the ML estimates rather than approximated sequentially after each iteration
  (very unstable), and therefore a separate stage is performed. This provides
  much better accuracy in the computations

NEW FEATURES

  - new `extract.group()` function to extract a single group object from an
  objects previously returned by `multipleGroup()`

  - return the SRMSR statistic in `M2()` along with the residual matrix
  (suggested by Dave Flora)

  - accept `Etable` default input in `customPriorFun` (suggested by Alexander
  Robitzsch)

  - vignette files for the package examples are now hosted on Github and
  can be accessed by following the link mentioned in the vignette location
  in the index or `?mirt` help file

  - E-step is now computed in parallel (if available) following a
  `mirtCluster()` definition

  - run no M-step optimizations by passing `TOL = NaN`. Useful to have
  the model converge instantly with all parameters exactly equal to the
  starting values

  - confidence envelope plots in `itemplot()` generate shaded regions instead
  of dotted lines, and confidence interval plots added to `plot()` generic
  through the `MI` input
