@@ -1,5 +1,5 @@
 Package: mirt
-Version: 1.5.6
+Version: 1.5.7
 Date: 2014-04-23
 Type: Package
 Title: Multidimensional Item Response Theory
@@ -35,6 +35,7 @@ Suggests:
     shiny,
     knitr,
     parallel,
+    nloptr,
     sirt,
     KernSmoothIRT,
     mirtCAT
