@@ -11,7 +11,7 @@ mirt(data, model, itemtype = NULL, guess = 0, upper = 1, SE = FALSE,
   quadpts = NULL, TOL = NULL, grsm.block = NULL, key = NULL,
   nominal.highlow = NULL, large = FALSE, GenRandomPars = FALSE,
   accelerate = TRUE, empiricalhist = FALSE, verbose = TRUE,
-  technical = list(), ...)
+  nloptr_args = list(), technical = list(), ...)
 }
 \arguments{
 \item{data}{a \code{matrix} or \code{data.frame} that consists of
@@ -70,13 +70,21 @@ See \code{SE.type} for the type of estimates available}
   or \code{'MHRM'} should be used when the dimensions are 3 or more}
 
 \item{optimizer}{a character indicating which numerical optimizer to use. By default, the EM
-algorithm will use the \code{'BFGS'} when there are no upper and lower bounds, and
-\code{'L-BFGS-B'} when there are. Other options include the Newton-Raphson (\code{'NR'}),
-which often will be more efficient than the \code{'BFGS'} but not as stable for more complex
-models (such as the nominal or nested logit models) and does not support
-upper and lower bound constraints. As well, the \code{'Nelder-Mead'} and \code{'SANN'}
-estimators are also available, but their routine use generally is not required or recommended.
-The MH-RM algorithm uses the \code{'NR'} by default, and currently cannot be changed}
+  algorithm will use the \code{'BFGS'} when there are no upper and lower bounds, and
+  \code{'L-BFGS-B'} when there are. Other options include the Newton-Raphson (\code{'NR'}),
+  which often will be more efficient than the \code{'BFGS'} but not as stable for more complex
+  models (such as the nominal or nested logit models) and does not support
+  upper and lower bound constraints. As well, the \code{'Nelder-Mead'} and \code{'SANN'}
+  estimators are also available, but their routine use generally is not required or recommended.
+  The MH-RM algorithm uses the \code{'NR'} by default, and currently cannot be changed.
+
+  Additionally, estimation subroutines from the \code{nloptr} package are available by passing
+  the arguments \code{'nloptr'} or \code{'nloptr_no_grad'} (the latter treats the gradient vector
+  function as NULL, for use in optimizers such as 'NLOPT_LN_NELDERMEAD'). This is to be used in
+  conjunction with the \code{nloptr_args} input specificed below. If equality constraints were
+  specified in the model definition only the parameter with the lowest \code{parnum}
+  in the \code{pars = 'values'} data.frame is used in the estimation vector passed
+  to the objective and gradient function}
 
 \item{pars}{a data.frame with the structure of how the starting values, parameter numbers,
 estimation logical values, etc, are defined. The user may observe how the model defines the
@@ -175,6 +183,12 @@ accomodate for less precision during estimation (TOL = 3e-5, NCYCLES = 2000, qua
 
 \item{verbose}{logical; print observed- (EM) or complete-data (MHRM) log-likelihood
 after each iteration cycle? Default is TRUE}
+
+\item{nloptr_args}{a list containing the relavent terms to use if the selected optimizer
+is \code{nloptr} or \code{nloptr_no_grad}. From the \code{help('nloptr')} documentation,
+only three argumets are reserved internally: \code{x0}, \code{eval_f}, and
+\code{evalu_grad_f}. The remaning arguments are set to the package defaults, and are over
+written by passing this list argument}
 
 \item{technical}{a list containing lower level technical parameters for estimation. May be:
 \describe{
