@@ -38,6 +38,13 @@ NEW FEATURES
   `QMC` argument (or will accept one through the ...  argument) to use the
   same integration scheme for better accuracy in higher dimensional models
 
+  - nonlinear parameter constraints for EM estimation can be specifed by using
+  the `nloptr` package by passing `optimizer = 'nloptr'` or `optimizer =
+  'nloptr_no_grad'`, as well as the relavent package arguments through the
+  `nloptr_ags` list input
+
+
+
 BUG FIXES
 
   - fixed bug in `bfactor()` starting values when NAs were specified in the
